--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,14 @@ nav {
   border-bottom: 3px solid rgba(255, 217, 0, 0.34);
   position: relative;
   z-index: 100;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #000;
+  transition: transform 0.3s ease-in-out;
+  
+  
 }
 
 .menu {
@@ -102,31 +110,68 @@ nav {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: rgba(0, 0, 0, 0.6);
   z-index: 1000;
+}
+
+.close-menu {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+  align-self: flex-end;
+  margin-right: 20px;
 }
 
 @media (max-width: 768px) {
   .hamburger {
     display: flex;
+    
   }
-
+  
+ nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #000;
+  transition: transform 0.3s ease-in-out;
+  height: 100px; /* Altura do seu cabeçalho */
+  
+ }
+ .hero {
+  padding-top: 120px 5%;
+  margin-top: 20px;
+ }
   .menu {
     flex-direction: column;
     background: #111;
     position: fixed;
     top: 0;
     right: -100%;
-    width: 250px;
+    width: 190px;
     height: 100vh;
-    padding: 60px 30px;
+    padding: 10px 0;
+    text-align: right;
     gap: 2rem;
     transition: right 0.3s ease-in-out;
     z-index: 1001;
+    position: absolute;
   }
-
+  .menu a {
+    width: 100%;
+    padding: 10px 10%;
+  }
+  .menu a:hover{
+    background-color: gold;
+    color: #fff;
+   
+  }
   .menu.show {
     right: 0;
   }
@@ -146,6 +191,14 @@ nav {
   .hamburger.active span:nth-child(3) {
     transform: rotate(-45deg) translate(6px, -6px);
   }
+  .close-menu {
+    display: flex;
+    width: 100%;
+    position: relative;
+    padding-left: 40px;
+    
+  }
+  
 }
 
 
@@ -343,6 +396,7 @@ nav {
     margin: 0 auto;
     
 }
+
 /*FIM SESSÃO SERVIÇOS - INICIO SESSÃO FOTOS*/
 
 .photo-gallery {
@@ -390,6 +444,22 @@ nav {
   .gallery-item:hover img {
     transform: scale(1.2); /* aumenta só a imagem */
   }
+
+  .gallery-item {
+    transition: transform 0.4s ease, opacity 0.4s ease;
+  }
+  
+  .gallery-item.active {
+    transform: scale(1.15);
+    z-index: 2;
+  }
+  
+  .gallery-item:not(.active) {
+    opacity: 0.6;
+    transform: scale(0.9);
+  }
+  
+
   #ctaphoto {
     display: flex;
     justify-content: center;
@@ -512,6 +582,7 @@ nav {
     .carousel-item {
       min-width: 90%;
       max-width: 90%;
+      width: 100%;
     }
   }
     
@@ -662,9 +733,21 @@ a:focus,
 /*INICIO DA RESPONSIVIDADE*/
 
 @media screen and (max-width: 1020px) {
- nav .menu {
-    display: none;
- }
+  .gallery-track {
+    display: flex;
+    overflow-x: auto;
+    overflow-y: hidden; /* remove a vertical */
+    scroll-behavior: smooth;
+  
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;  /* IE e Edge */
+  }
+  
+  .gallery-track::-webkit-scrollbar {
+    display: none; /* Chrome, Safari e Opera */
+  }
+  
+ 
  .hero {
     background-position: 50%;
     padding: 10px 5%;
@@ -730,7 +813,7 @@ a:focus,
   min-width: 350px;
   max-width: 350px;
   
-  
+  width: 100%;
   margin: 0 10px;
   padding: 20px;
   background: #1c1c1c;
